# capp-run

./: CMakeLists.txt  README.md  cmake-init.sh  dev-shell
src/: capp.cpp  capp.h  context.cpp  context.h  main.cpp  net.cpp  net.h  oci-hooks.cpp  oci-hooks.h  project.cpp  project.h  utils.cpp  utils.h
tools/: Dockerfile.dev-shell  run-clang-tidy
